--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -2,6 +2,9 @@
 % スタイルファイルの指定
 % パッケージを使用する場合，ここで全て指定する．
 \documentstyle[cite,a4j,twoside,12pt,enumerate,graphicx,listings,amssymb,subcaption,amsmath]{jbmdthesis}
+% \documentclass[cite,a4j,twoside,12pt,enumerate,graphicx,listings,amssymb,subcaption,amsmath]{jbmdthesis}
+
+% \usepackage[dvipdfmx]{graphicx}
 
 % ヘッダを追加する
 \pagestyle{headings}
@@ -25,7 +28,8 @@
 
 % ---------- ユーザ入力ここから ----------
 % タイトルページの情報
-\title{\bf 容量効率を意識したソース・タグ値に基づくセグメント化による \\
+\title{\bf 容量効率を意識したソース・タグ値に \\
+基づくセグメント化による\\
 発行キューの電力削減}
 \author{\bf 森　健一郎}
 \date{3} % 令和~年
