--- a/thesis/src/abstract.tex
+++ b/thesis/src/abstract.tex
@@ -1,7 +1,6 @@
 
 \chapter*{概要}
 \markboth{概要}{概要}
-近年のサーバー・アプリケーションや，JavaScriptで書かれたWebアプリケーションでは，従来のアプリケーションと比べて命令キャッシュ・ミスが特に多く発生することが知られている．これに対し，命令キャッシュ向けのプリフェッチャが多く研究されており，非常に高いキャッシュ・ヒット率が達成されている．しかし，それらのプリフェッチャでは高い性能をもつものほど大きな追加資源が必要になる．例えば，最先端の命令プリフェッチャであるProactive Instruction Fetchでは，L1命令キャッシュそのものより大きなテーブルを必要とする．また，プリフェッチのミスに対するカバー率こそ高いものの，無駄なプリフェッチを多く実行してしまい，電力を無駄に消費してしまう場合がある．
+発行キューは電力密度の大きいホット・スポットとして知られている．ホット・スポットは，デバイスの摩耗故障を引き起こし，誤動作やタイミング・エラーを引き起こす．発行キューが大きな電力を消費する原因は，ウェイクアップ論理のタグ比較回路である．この回路はCAMで構成されており，全てのデスティネーション・タグと発行キュー内の全てのソース・タグとの多数の比較を一斉に行うため，非常に大きな電力を消費する．そこで本論文では，CAM の分野で提案されている手法を応用し，タグ比較による消費電力を削減する手法を提案する．本手法では，発行キューを複数のセグメントに分割する．命令は，ソース・タグの下位ビットがセグメント番号と一致するセグメントにディスパッチする．そして，ウェイクアップ時には，ディスティネーション・タグの下位ビットが一致するセグメントにあるタグ比較器のみを動作させる．一致しないセグメントの比較器は動作しないため，タグ比較器の動作回数を削減できる．
 
-これに対し，本論文では命令プリフェッチのアプローチではなく，フェッチ・ステージのパイプライン構造の工夫によりフェッチ・スループットを向上させる手法を提案する．本提案手法はプリフェッチャと異なり，複雑な機構や大きなテーブルも必要なく，無駄なメモリアクセスを全く行わない．さらに，性能低下のデメリットなしに命令キャッシュ・ミスによるストールを削減し，フェッチ・スループットを向上させることができる．
-提案手法をサーバー向けのベンチマークを用いて評価したところ，プリフェッチを行わない場合と比較して最大 25.8\%，平均で13.0\%の性能向上を達成した．また，最先端の命令プリフェッチャと比較して平均4.8\%の性能向上が得られることを確認した．
+本手法では，命令がディスパッチされるセグメントに空きがない場合，他のセグメントに空きがあってもディスパッチできないためストールする．この結果，発行キューの容量効率が低下するという問題が生じる．この問題は，発行キューの容量効率が重要なプログラムにおいて性能低下を引き起こす．そこで本論文では，容量効率を重視したディスパッチ・アルゴリズムと，タグ比較の積極的な削減を重視したディスパッチ・アルゴリズムを動的に切り替える手法を提案する．本手法は，発行キューの容量効率が重要な場合は容量効率の低下による性能低下を抑制し，そうでない場合は積極的にタグ比較器の動作回数を削減することを可能とする．提案手法を SPEC CPU 2017 を用いて評価を行った．結果，性能低下を最大で 5\% 以下（平均 -1\%）に抑えつつ，タグ比較器の動作回数を平均で 85\% 削減できることを確認した．
