--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -66,7 +66,7 @@
 % ---------- ユーザ入力ここから ----------
 % 各章の記述
 \include{src/introduction}
-\include{src/miss_assumed_pipeline}
+\include{src/basic_IQ}
 
 % \include{src/related_work}
 \include{src/summary}
@@ -85,6 +85,6 @@
 
 % 参考文献
 \bibliographystyle{IEEEtran} 
-\bibliography{ref}
+\bibliography{ref_swopp}
 
 \end{document}
