--- a/thesis/src/related_work.tex
+++ b/thesis/src/related_work.tex
@@ -2,3 +2,9 @@
 \chapter{関連研究}
 \label{sec:related_work}
 
+\section{発行キューの電力削減に関する関連研究}
+発行キューの電力削減に関する研究を紹介する．Ponomarev らは，リソース要求に応じて 発行キューのサイズをリサイズすることにより，消費エネルギーを削減する手法を提案した~\cite{ponomarev2001} .
+
+Sembrant らは，クリティカル・パス上にない命令を発行キューとは別のバッファに入れ，ディスパッチを遅延させることによって，性能を低下させずに発行キューのサイズを小さくする手法を提案した~\cite{Sembrant2015}.
+
+Ernst らは，発行キューを，2 つのソース・オペランドを保持できるキュー，1 つのソース・オペランドのみ保持できるキュー，オペランドを保持しないキューの 3 つに分割し，レディでないソース・オペランドの数に応じていずれかにディスパッチする手法を提案した~\cite{ernst2002}. この手法では，タグ比較器の数そのものを削減できるため，ウェイクアップの消費電力を削減できる．
