--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -66,14 +66,18 @@
 
 % ---------- ユーザ入力ここから ----------
 % 各章の記述
+% はじめに
 \include{src/introduction}
-\include{src/basic_IQ}
 
+% 本文
+\include{src/basic_IQ}
 \include{src/related_work}
 \include{src/segment_IQ}
 \include{src/switch}
+\include{src/other_idea}
 
-% \include{src/summary}
+% まとめ
+\include{src/summary}
 
 
 % 付録（必要に応じてコメントを外したり，新たに追加する）
