--- a/thesis/ref_swopp.bib
+++ b/thesis/ref_swopp.bib
@@ -238,24 +238,6 @@ month =	         {November}
   pages =	 {206-218},
 }
 
-@inproceedings{goshima01.2,
-  author = {M. Goshima and K. Nishino and Y. Nakashima and S. Mori and T. Kitamura and S. Tomita},
-  title = {A high-speed dynamic instruction scheduling scheme for superscalar processors},
-  booktitle = {Proceedings of the 34th Annual International Symposium on Microarchitecture},
-  pages = {225--236},
-  month = {December},
-  year = {2001}
-}
-
-@InProceedings{sassone2007,
-  author = 	 {P. G. Sassone and J. {Rupley II} and E. Brekelbaum and G. H. Loh and B. Black},
-  title = 	 {Matrix scheduler reloaded},
-  booktitle =	 {Proceedings of the 34th Annual International Symposium on Computer Architecture},
-  pages =	 {335--346},
-  year =	 2007,
-  month =	 {June}
-}
-
 @InProceedings{Alpha21464,
   author = {R. P. Preston and R. W. Badeau and D. W. Bailey and S. L. Bell and L. L. Biro and W. J. Bowhill and D. E.  Dever and S. Felix and R. Gammack and V. Germini and M. K. Gowan and P. Gronowski and D. B. Jackson and S. Mehta and S. V. Morton and J. D. Pickholtz and M. H. Reilly and M. J. Smith},
   title = {Design of an 8-wide Superscalar {RISC} Microprocessor with Simultaneous Multithreading},
@@ -336,4 +318,85 @@ pages = {334--346},
   volume={33},  
   number={5},  
   pages={707-712},
+}
+
+@inproceedings{Stark2000,
+ author = {J. Stark and M. D. Brown and Y. N. Patt},
+ title = {On pipelining dynamic instruction scheduling logic},
+ booktitle = {Proceedings of the 33rd Annual International Symposium on Microarchitecture},
+ year = {2000},
+ month = {December},
+ pages = {57--66},
+}
+
+@inproceedings{goshima2001,
+  author = {M. Goshima and K. Nishino and T. Kitamura and Y. Nakashima and S. Tomita and S. Mori},
+  title = {A high-speed dynamic instruction scheduling scheme for superscalar processors},
+  booktitle = {Proceedings of the 34th Annual International Symposium on Microarchitecture},
+  pages = {225--236},
+  month = {December},
+  year = {2001}
+}
+
+@InProceedings{Lebeck2002,
+  author = 	 {A. R. Lebeck and J. Koppanalil and T. Li and J. Patwardhan and E. Rotenberg},
+  title = 	 {A Large, Fast Instruction Window for Tolerating Cache Misses},
+  booktitle =	 {Proceedings of the 29th Annual International Symposium on Computer Architecture},
+  pages =	 {59--70},
+  year =	 2002,
+  month =	 {May}
+}
+
+@InProceedings{Kim2003,
+  author = 	 {I. Kim and M. H. Lipasti},
+  title = 	 {Macro-op Scheduling: Relaxing Scheduling Loop Constraints},
+  booktitle = {Proceedings of the 36th Annual International Symposium on Microarchitecture },
+  pages = 	 {277-289},
+  year = 	 {2003},
+  month = 	 {December},
+}
+
+@InProceedings{Gibson2010,
+  author = 	 {D. Gibson and D. A. Wood},
+  title = 	 {Forwardflow: A scalable core for power-constrained {CMPs}},
+  booktitle = {Proceedings of the 37th Annual International Symposium on Computer Architecture},
+  pages = 	 {14-25},
+  year = 	 {2010},
+  month = 	 {June},
+}
+
+@ARTICLE{H.Homayoun2011,
+author={H. Homayoun and A. Sasan and J. Gaudiot and A. Veidenbaum},
+title={Reducing Power in All Major CAM and SRAM-Based Processor Units via Centralized, Dynamic Resource Size Management},
+journal={IEEE Transactions on Very Large Scale Integration (VLSI) Systems},
+year={2011},
+volume={19},
+number={11},
+pages={2081-2094},
+month={Nov},
+}
+
+@Misc{kobayashi-thesis,
+  author = 	 {小林誠弥},
+  title = 	 {発行キューにおけるタグの2段階比較による消費エネルギー削減},
+  howpublished = {名古屋大学大学院工学研究科博士課程(前期課程), 修士学位論文},
+  OPTmonth = 	 {},
+  year = 	 {2015年3月},
+}
+
+@Misc{matsuda-thesis,
+  author = 	 {松田　康誉},
+  title = 	 {ランダム発行キューにおけるタグの2段階比較による電力削減},
+  howpublished = {名古屋大学大学院工学研究科博士課程(前期課程), 修士学位論文},
+  OPTmonth = 	 {},
+  year = 	 {2020年3月},
+}
+
+@InProceedings{sassone2007,
+  author = 	 {P. G. Sassone and J. {Rupley II} and E. Brekelbaum and G. H. Loh and B. Black},
+  title = 	 {Matrix scheduler reloaded},
+  booktitle =	 {Proceedings of the 34th Annual International Symposium on Computer Architecture},
+  pages =	 {335--346},
+  year =	 2007,
+  month =	 {June}
 }
