--- a/thesis/ref.bib
+++ b/thesis/ref.bib
@@ -15,11 +15,426 @@
     month = {December},
 }
 
+@inproceedings{ptask2016,
+    author = {Kallurkar, Prathmesh and R. Sarangi, Smruti},
+    year = {2016},
+    month = {October},
+    pages = {1--12},
+    booktitle = {Proceedings of the 49th International Symposium on Microarchitecture},
+    title = {{pTask}: A smart prefetching scheme for {OS} intensive applications}
+}
+
+@article{gem5,
+    author = {Binkert, Nathan and Beckmann, Bradford and Black, Gabriel and Reinhardt, Steven K. and Saidi, Ali and Basu, Arkaprava and Hestness, Joel and Hower, Derek R. and Krishna, Tushar and Sardashti, Somayeh and Sen, Rathijit and Sewell, Korey and Shoaib, Muhammad and Vaish, Nilay and Hill, Mark D. and Wood, David A.},
+    title = {The Gem5 Simulator},
+    month = {August},
+    year = {2011},
+    pages = {1--7},
+}
+
+@inproceedings{Kaynak2015,
+    author = {Kaynak, Cansu and Grot, Boris and Falsafi, Babak},
+    title = {Confluence: Unified Instruction Supply for Scale-out Servers},
+    booktitle = {Proceedings of the 48th International Symposium on Microarchitecture},
+    year = {2015},
+    pages = {166--177},
+    month = {December}
+} 
+
+@inproceedings{Atta2012,
+    author = {Atta, Islam and Tozun, Pinar and Ailamaki, Anastasia and Moshovos, Andreas},
+    title = {{SLICC}: Self-Assembly of Instruction Cache Collectives for {OLTP} Workloads},
+    booktitle = {Proceedings of the 45th International Symposium on Microarchitecture},
+    year = {2012},
+    pages = {188--198},
+    month = {December}
+} 
+
+@inproceedings{Zhu2015,
+    author = {Zhu, Yuhao and Richins, Daniel and Halpern, Matthew and Reddi, Vijay Janapa},
+    title = {Microarchitectural Implications of Event-driven Server-side Web Applications},
+    booktitle = {Proceedings of the 48th International Symposium on Microarchitecture},
+    year = {2015},
+    pages = {762--774},
+    month = {December}
+} 
+
+@inproceedings{Shioya2014,
+    author = {R. Shioya and H. Ando},
+    booktitle = {Proceedings of the 32nd International Conference on Computer Design},
+    title = {Energy efficiency improvement of renamed trace cache through the reduction of dependent path length},
+    year = {2014},
+    pages = {416--423},
+    month = {October},
+}
+
+@inproceedings{Shioya2010,
+    author = {Shioya, Ryota and Horio, Kazuo and Goshima, Masahiro and Sakai, Shuichi},
+    title = {Register Cache System Not for Latency Reduction Purpose},
+    booktitle = {Proceedings of the 43rd International Symposium on Microarchitecture},
+    year = {2010},
+    pages = {301--312},
+    month = {December}
+}
+
+@inproceedings{Ferdman2008,
+    author={M. Ferdman and T. F. Wenisch and A. Ailamaki and B. Falsafi and A. Moshovos},
+    booktitle={Proceedings of the 41st International Symposium on Microarchitecture},
+    title={Temporal instruction fetch streaming},
+    year={2008},
+    pages={1--10},
+    month={November},
+}
+
+@inproceedings{Kaynak2013,
+    author = {Kaynak, Cansu and Grot, Boris and Falsafi, Babak},
+    title = {{SHIFT}: Shared History Instruction Fetch for Lean-core Server Processors},
+    booktitle = {Proceedings of the 46th International Symposium on Microarchitecture},
+    year = {2013},
+    pages = {272--283},
+    month = {December}
+} 
+
+@inproceedings{Reinman1999,
+    author = {Reinman, Glenn and Calder, Brad and Austin, Todd},
+    title = {Fetch Directed Instruction Prefetching},
+    booktitle = {Proceedings of the 32nd International Symposium on Microarchitecture},
+    year = {1999},
+    pages = {16--27},
+    month = {December},
+} 
+
+@inproceedings{Kumar2018,
+    author = {Kumar, Rakesh and Grot, Boris and Nagarajan, Vijay},
+    title = {Blasting Through the Front-End Bottleneck with Shotgun},
+    booktitle = {Proceedings of the 23rd International Conference on Architectural Support for Programming Languages and Operating Systems},
+    year = {2018},
+    pages = {30--42},
+    month = {March}
+}
+
+@inproceedings{Kumar2017, 
+    author={R. Kumar and C. C. Huang and B. Grot and V. Nagarajan}, 
+    booktitle={Proceedings of the 23th International Symposium on High-Performance Computer Architecture}, 
+    title={Boomerang: A Metadata-Free Architecture for Control Flow Delivery}, 
+    year={2017}, 
+    pages={493-504}, 
+    month={February},
+}
+
+@inproceedings{Ranganathan1998,
+    author = {Ranganathan, Parthasarathy and Gharachorloo, Kourosh and Adve, Sarita V. and Barroso, Luiz Andr{\'e}},
+    title = {Performance of Database Workloads on Shared-memory Systems with Out-of-order Processors},
+    booktitle = {Proceedings of the 8th International Conference on Architectural Support for Programming Languages and Operating Systems},
+    year = {1998},
+    pages = {307--318},
+    month = {December},
+} 
+
+@inproceedings{Burcea2009,
+    author = {Burcea, Ioana and Moshovos, Andreas},
+    title = {Phantom-BTB: A Virtualized Branch Target Buffer Design},
+    booktitle = {Proceedings of the 14th International Conference on Architectural Support for Programming Languages and Operating Systems},
+    year = {2009},
+    pages = {313--324},
+    month = {March},
+}
+
+@article{Seznec2007,
+  title={The {L-TAGE} Branch Predictor},
+  author={Andr{\'e} Seznec},
+  journal={J. Instruction-Level Parallelism},
+  year={2007},
+  volume={9}
+}
+
+@inproceedings{RDIP, 
+    author={A. Kolli and A. Saidi and T. F. Wenisch}, 
+    booktitle={Proceedings of the 46th International Symposium on Microarchitecture}, 
+    title={{RDIP}: Return-address-stack Directed Instruction Prefetching}, 
+    year={2013}, 
+    pages={260--271}, 
+    month={December},
+}
+
+@inproceedings{Bungee, 
+    author={D. S. McFarlin and C. Zilles}, 
+    booktitle={Proceedings of the 48th International Symposium on Microarchitecture}, 
+    title={Bungee jumps: Accelerating indirect branches through {HW/SW} co-design}, 
+    year={2015}, 
+    pages={370--382}, 
+    month={December},
+}
+
+@inproceedings{Spracklen2005,
+    author = {Spracklen, Lawrence and Chou, Yuan and Abraham, Santosh G.},
+    title = {Effective Instruction Prefetching in Chip Multiprocessors for Modern Commercial Applications},
+    booktitle = {Proceedings of the 11th International Symposium on High-Performance Computer Architecture},
+    year = {2005},
+    pages = {225--236},
+    month = {February},
+}
+
+@inproceedings{Chou2007,
+    author = {Chou, Yuan},
+    title = {Low-Cost Epoch-Based Correlation Prefetching for Commercial Applications},
+    booktitle = {Proceedings of the 40th International Symposium on Microarchitecture},
+    year = {2007},
+    pages = {301--313},
+    month = {December},
+} 
+
+@inproceedings{Burcea2008,
+    author = {Burcea, Ioana and Somogyi, Stephen and Moshovos, Andreas and Falsafi, Babak},
+    title = {Predictor Virtualization},
+    booktitle = {Proceedings of the 13th International Conference on Architectural Support for Programming Languages and Operating Systems},
+    year = {2008},
+    pages = {157--167},
+    month = {March},
+}
+
+@inproceedings{Stark1997,
+    author = {Stark, Jared and Racunas, Paul and Patt, Yale N.},
+    title = {Reducing the Performance Impact of Instruction Cache Misses by Writing Instructions into the Reservation Stations Out-of-order},
+    booktitle = {Proceedings of the 30th International Symposium on Microarchitecture},
+    year = {1997},
+    pages = {34--43},
+    month = {December},
+} 
+
+@inproceedings{Luk1998,
+    author = {Luk, Chi-Keung and Mowry, Todd C.},
+    title = {Cooperative Prefetching: Compiler and Hardware Support for Effective Instruction Prefetching in Modern Processors},
+    booktitle = {Proceedings of the 31st International Symposium on Microarchitecture},
+    year = {1998},
+    pages = {182--194},
+    month = {December},
+}
+
+@inproceedings{Huang2016,
+    author = {Huang, Ziqiang and Hilton, Andrew D. and Lee, Benjamin C.},
+    title = {Decoupling Loads for Nano-instruction Set Computers},
+    booktitle = {Proceedings of the 43rd International Symposium on Computer Architecture},
+    year = {2016},
+    pages = {406--417},
+    month = {June},
+} 
+
+@inproceedings{Chadha2014,
+    author = {Chadha, Gaurav and Mahlke, Scott and Narayanasamy, Satish},
+    title = {{EFetch}: Optimizing Instruction Fetch for Event-driven Web applications},
+    booktitle = {Proceedings of the 23rd International Conference on Parallel Architectures and Compilation},
+    year = {2014},
+    pages = {75--86},
+    month={February},
+} 
+
+@inproceedings{Annavaram2001,
+    author = {Annavaram, Murali and Patel, Jignesh M. and Davidson, Edward S.},
+    title = {Call Graph Prefetching for Database Applications},
+    booktitle = {Proceedings of the 7th International Symposium on High-Performance Computer Architecture},
+    year = {2001},
+    pages = {281--290},
+    month={January}
+}
+
+@inproceedings{Ramirez2002,
+    author = {Ramirez, Alex and Santana, Oliverio J. and Larriba-Pey, Josep L. and Valero, Mateo},
+    title = {Fetching Instruction Streams},
+    booktitle = {Proceedings of the 35th International Symposium on Microarchitecture},
+    year = {2002},
+    pages = {371--382},
+    month = {December},
+}
+
+@inproceedings{Rotenberg1996, 
+    author={E. Rotenberg and S. Bennett and J. E. Smith}, 
+    booktitle={Proceedings of the 29th International Symposium on Microarchitecture}, 
+    title={Trace cache: a low latency approach to high bandwidth instruction fetching}, 
+    year={1996}, 
+    pages={24--34}, 
+    month={December},
+}
+
+@inproceedings{Vaidya2008,
+    author    = {Pranav Vaidya and Jaehwan John Lee},
+    title     = {Characterization of {TPC-H} queries for a column-oriented database on a dual-core {AMD} {Athlon} processor},
+    booktitle = {Proceedings of the 17th ACM conference on Information and knowledge management},
+    pages     = {1411--1412},
+    year      = {2008},
+    month = {October},
+}
+
+@inproceedings{Ferdman2012,
+    author = {Ferdman, Michael and Adileh, Almutaz and Kocberber, Onur and Volos, Stavros and Alisafaee, Mohammad and Jevdjic, Djordje and Kaynak, Cansu and Popescu, Adrian Daniel and Ailamaki, Anastasia and Falsafi, Babak},
+    title = {Clearing the Clouds: A Study of Emerging Scale-out Workloads on Modern Hardware},
+    booktitle = {Proceedings of the 17th International Conference on Architectural Support for Programming Languages and Operating Systems},
+    year = {2012},
+    pages = {37--48},
+    month = {March},
+} 
+
+@inproceedings{Sherwood2000,
+    author = {Sherwood, Timothy and Sair, Suleyman and Calder, Brad},
+    title = {Predictor-directed Stream Buffers},
+    booktitle = {Proceedings of the 33rd International Symposium on Microarchitecture},
+    year = {2000},
+    pages = {42--53},
+    month = {December},
+} 
+
+@article{Jouppi1990,
+    author = {Jouppi, Norman P.},
+    title = {Improving Direct-mapped Cache Performance by the Addition of a Small Fully-associative Cache and Prefetch Buffers},
+    journal = {SIGARCH Comput. Archit. News},
+    issue_date = {June 1990},
+    volume = {18},
+    number = {2SI},
+    month = {May},
+    year = {1990},
+    issn = {0163-5964},
+    pages = {364--373},
+} 
+
+@inproceedings{Menon2012, 
+    author={J. {Menon} and M. {de Kruijf} and K. {Sankaralingam}}, 
+    booktitle={Proceedings of the 39th Annual International Symposium on Computer Architecture}, 
+    title={iGPU: Exception support and speculative execution on GPUs}, 
+    year={2012}, 
+    pages={72-83}, 
+    month={June},
+}
+
+@inproceedings{Tsai2017, 
+    author={P. {Tsai} and N. {Beckmann} and D. {Sanchez}}, 
+    booktitle={Proceedings of the 44th Annual International Symposium on Computer Architecture}, 
+    title={Jenga: Software-defined cache hierarchies}, 
+    year={2017}, 
+    pages={652--665}, 
+    month={June},
+}
+
+@inproceedings{Ajorpaz2018,
+    author = {Ajorpaz, Samira Mirbagher and Garza, Elba and Jindal, Sangam and Jim{\'e}nez, Daniel A.},
+    title = {Exploring Predictive Replacement Policies for Instruction Cache and Branch Target Buffer},
+    booktitle = {Proceedings of the 45th Annual International Symposium on Computer Architecture},
+    year = {2018},
+    pages = {519--532},
+    month = {June}
+}
+
+@inproceedings{Khan2010,
+    author = {Khan, Samira Manabi and Tian, Yingying and Jimenez, Daniel A.},
+    title = {Sampling Dead Block Prediction for Last-Level Caches},
+    booktitle = {Proceedings of the 43rd Annual International Symposium on Microarchitecture},
+    year = {2010},
+    pages = {175--186},
+    month = {December}
+} 
+
+@inproceedings{Buyuktosunoglu2003, 
+    author={A. {Buyuktosunoglu} and T. {Karkhanis} and D. H. {Albonesi} and {Pradip Bose}}, 
+    booktitle={Proceedings of the 30th Annual International Symposium on Computer Architecture}, 
+    title={Energy efficient co-adaptive instruction fetch and issue}, 
+    year={2003}, 
+    pages={147--156}, 
+    month={June},
+}
+
+@inproceedings{Ayers2019,
+    author = {Ayers, Grant and Nagendra, Nayana Prasad and August, David I. and Cho, Hyoun Kyu and Kanev, Svilen and Kozyrakis, Christos and Krishnamurthy, Trivikram and Litz, Heiner and Moseley, Tipp and Ranganathan, Parthasarathy},
+    title = {Asm{DB}: Understanding and Mitigating Front-end Stalls in Warehouse-scale Computers},
+    booktitle = {Proceedings of the 46th International Symposium on Computer Architecture},
+    year = {2019},
+    pages = {462--473},
+    month = {June}
+}
+
+@inproceedings{Jaleel2010,
+    author = {Jaleel, Aamer and Theobald, Kevin B. and Steely,Jr., Simon C. and Emer, Joel},
+    title = {High Performance Cache Replacement Using Re-reference Interval Prediction ({RRIP})},
+    booktitle = {Proceedings of the 37th International Symposium on Computer Architecture},
+    year = {2010},
+    pages = {60--71},
+} 
+
+@inproceedings{Bharadwaj2018,
+    author = {Bharadwaj, Srikant and Cox, Guilherme and Krishna, Tushar and Bhattacharjee, Abhishek},
+    year = {2018},
+    month = {October},
+    pages = {271-284},
+    title = {Scalable Distributed Last-Level {TLB}s Using Low-Latency Interconnects},
+    booktitle={Proceedings of the 51st Annual International Symposium on Microarchitecture},
+}
+
+@inproceedings{John2012,
+    author={J. {Sartori} and B. {Ahrens} and R. {Kumar}},
+    booktitle={Proceedings of the 18th International Symposium on High Performance Computer Architecture},
+    title={Power balanced pipelines},
+    year={2012},
+    pages={1-12},
+    month={February},
+}
+
+@inproceedings{Tiwari2007,
+    author = {Tiwari, Abhishek and Sarangi, Smruti R. and Torrellas, Josep},
+    title = {{ReCycle}:: Pipeline Adaptation to Tolerate Process Variation},
+    booktitle = {Proceedings of the 34th Annual International Symposium on Computer Architecture},
+    year = {2007},
+    pages = {323--334},
+    month = {June},
+} 
+
+@inproceedings{Lin2018,
+    author={B. {Lin} and M. B. {Healy} and R. {Miftakhutdinov} and P. G. {Emma} and Y. {Patt}},
+    booktitle={Proceedings of the 51st Annual International Symposium on Microarchitecture},
+    title={Duplicon Cache: Mitigating Off-Chip Memory Bank and Bank Group Conflicts Via Data Duplication},
+    year={2018},
+    pages={285--297},
+    month={October},
+}
+
+@inproceedings{Lee1997,
+    author = {Lee, Chih-Chieh and Chen, I-Cheng K. and Mudge, Trevor N.},
+    title = {The Bi-mode Branch Predictor},
+    booktitle = {Proceedings of the 30th International Symposium on Microarchitecture},
+    year = {1997},
+    pages = {4--13},
+    month = {December},
+} 
+
+@inproceedings{Kroft1981,
+    author = {Kroft, David},
+    title = {Lockup-free Instruction Fetch/Prefetch Cache Organization},
+    booktitle = {Proceedings of the 8th Annual Symposium on Computer Architecture},
+    year = {1981},
+    pages = {81--87},
+    month = {May},
+} 
+
+@inproceedings{Ailamaki1999,
+    author = {Ailamaki, Anastassia and DeWitt, David J. and Hill, Mark D. and Wood, David A.},
+    title = {DBMSs on a Modern Processor: Where Does Time Go?},
+    booktitle = {Proceedings of the 25th International Conference on Very Large Data Bases},
+    year = {1999},
+    pages = {266--277},
+    month = {September},
+} 
+
 @article{Skylake_MPR,
     author = {L. Gwennap},
-    title = {Skylake Speedshifts to Next Gear},
-    journal = {Microprocessor Report},
+    title = {Skylake Speedshifts to next gear},
+    journal = {Microprocessor report},
     year = {2015},
     month = {September},
     day = {7},
 }
+
+@inproceedings{Keeton1998,
+ author = {Keeton, Kimberly and Patterson, David A. and He, Yong Qiang and Raphael, Roger C. and Baker, Walter E.},
+ title = {Performance Characterization of a Quad {Pentium} {Pro} {SMP} Using {OLTP} Workloads},
+ booktitle = {Proceedings of the 25th International Symposium on Computer Architecture},
+ year = {1998},
+ pages = {15--26},
+ month = {June},
+} 
