--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -76,15 +76,16 @@
 \include{src/related_work}
 \include{src/segment_IQ}
 \include{src/switch}
-\include{src/other_idea}
+\include{src/eval}
+
 
 % まとめ
 \include{src/summary}
 
 
 % 付録（必要に応じてコメントを外したり，新たに追加する）
-% \appendix
-% \include{src/appendix1}
+\appendix
+\include{src/appendix1}
 
 % 発表実績（なければコメントアウトしておく）
 \include{src/publication}
