--- a/thesis/src/summary.tex
+++ b/thesis/src/summary.tex
@@ -1,6 +1,8 @@
 
 \chapter{まとめ}
 \label{sec:summary}
-本論文では，パイプライン構造の工夫によって命令キャッシュ・ミスによる性能低下を抑制する手法を提案した．本論文ではまず，MAPと呼ばれる独自のパイプライン構造を提案した．MAPは命令キャッシュ・ミスが発生しても性能が低下しない代わりに，分岐予測ミス・ペナルティが増加するという特徴を持つ．そして，本論文では，MAPと従来の構成を組み合わせ，それらを動的に使い分けることで性能向上を図るアーキテクチャと，このアーキテクチャの性能を最大化することができるパイプラインの切り替えアルゴリズムを提案した．提案手法の利点は，命令プリフェッチャと異なり，非常に小さなコストで構成できる上，無駄なメモリ・アクセスを全く行わないことである．
+LSIの微細化の進展に伴って，経年劣化が加速し摩耗故障が増加する問題が深刻になっている．この故障は，デバイスの温度に関して指数関数的に加速するため，チップ内のホット・スポットの解消が求められている．
 
-サーバー向けベンチマークで提案手法の評価を行ったところ，提案手法はプリフェッチなしのモデルと比較して最大 25.8\%，平均で13.0\%の性能向上を達成し，最先端の命令プリフェッチャと比較して平均4.8\%の性能向上が得られることを確認した．また，提案手法を適用することで，性能へ大きく影響を与えることなく，命令キャッシュのサイズを小さくできることを確認した．
+発行キューはこのホット・スポットの 1 つとして知られている．この主な原因はウェイクアップ時の多数のタグ比較である．本論文では，ウェイクアップ時のタグ比較回数を削減するために，発行キューをセグメント化，および，それに関わるいくつかの手法を提案した．
+
+提案手法には発行キューの容量効率が低下するという問題点が存在する．この問題点に対して，本論文ではさらに，異なる 2 つのディスパッチ・アルゴリズムを，性能についての容量効率の重要性に応じて切り替えて使用することにより，容量効率の低下による性能低下を抑制する手法を提案した．提案手法を SPEC CPU 2017 を使って評価したところ，性能低下を最大でも 5\% 以下（平均 -1\%）に抑えつつ，タグ比較回数を 80\% 削減できることを確認した．
