--- a/thesis/src/segment_IQ.tex
+++ b/thesis/src/segment_IQ.tex
@@ -73,25 +73,40 @@
 %4 第 2 ソース・タグ比較の削減
 \section{第 2 ソース・タグ比較の削減}
 \label{sec:second_tag_comp}
-\ref{sec:segmented_IQ}節で述べた手法では，命令の第 2 ソース・タグのタグ比較回数は削減できない．そこで本節では，第 2 ソース・タグの比較回数の削減を可能とする\textbf{スワップ}と\textbf{サブ・セグメント}という 2 つの手法を提案する．
+\refsec{segmented_IQ}節で述べた手法では，命令の第 2 ソース・タグのタグ比較回数は削減できない．そこで本節では，第 2 ソース・タグの比較回数の削減を可能とする\textbf{スワップ}と\textbf{サブ・セグメント}という 2 つの手法を提案する．
 
 \subsection{スワップ}
 \label{sec:swap}
 スワップは，第 1 ソース・タグと第 2 ソース・タグを格納するフィールドを交換し，第 2 ソース・タグの下位ビットをもとにディスパッチするセグメントを決定する手法である．以下で詳しく説明する．
 
-第 1 ソース・オペランドがレディで，第 2 ソース・オペランドがレディでない場合について説明する．この場合，\ref{sec:segmented_IQ}節で説明した方法では，命令はセグメント・インディペンデントとしてディスパッチされる．第 1 ソース・オペランドは既にレディであるため，比較は第 2 ソース・タグについてのみ行われるが，第 2  ソース・タグのタグ比較は全てのセグメントで行われるため，タグ比較の回数は削減されない．
+第 1 ソース・オペランドがレディで，第 2 ソース・オペランドがレディでない場合について説明する．この場合，\refsec{segmented_IQ}節で説明した方法では，命令はセグメント・インディペンデントとしてディスパッチされる．第 1 ソース・オペランドは既にレディであるため，比較は第 2 ソース・タグについてのみ行われるが，第 2  ソース・タグのタグ比較は全てのセグメントで行われるため，タグ比較の回数は削減されない．
 
-そこでこのような場合に，第 1 ソース・タグと第 2 ソース・タグを交換し（スワップ），第 2 ソース・タグの下位ビットを使用してディスパッチするセグメントを選択する．これにより，\ref{sec:segmented_IQ}節で述べたセグメント化の効果でタグ比較回数が削減される．なお，スワップではタグを交換するが，ペイロード RAM に格納するソース・タグを交換するわけではないので，命令の意味は保持される．
+そこでこのような場合に，第 1 ソース・タグと第 2 ソース・タグを交換し（スワップ），第 2 ソース・タグの下位ビットを使用してディスパッチするセグメントを選択する．これにより，\refsec{segmented_IQ}節で述べたセグメント化の効果でタグ比較回数が削減される．なお，スワップではタグを交換するが，ペイロード RAM に格納するソース・タグを交換するわけではないので，命令の意味は保持される．
 
 \subsubsection{スワップを行う場合のセグメント選択アルゴリズム}
-セグメント選択回路は，以下に示すアルゴリズムによってディスパッチするセグメントを決定する．
-\begin{itemize}
-  \item \textbf{両ソース・オペランドともレディでない場合}：第 1 ソース・タグでセグメントを選択する．
-  \item \textbf{第 1 ソース・オペランドのみレディである場合}：スワップを行い，第 2 ソース・タグでセグメントを選択する．
-  \item \textbf{第 2 ソース・オペランドのみレディである場合}：第 1 ソース・タグでセグメントを選択する．
-  \item \textbf{両ソース・オペランドがレディである場合}：セグメント・インディペンデントとしてラウンドロビンでセグメントを選択する．
-\end{itemize}
+セグメント選択回路は，\tab{agg_algorithm}に示すアルゴリズムによってディスパッチするセグメントを決定する．なお，ソース・タグの状態とは，ディスパッチ時にソース・オペランドがレディであるかどうかを(第 1 ソース・オペランド，第 2 ソース・オペランド)の形式で示しており，R がレディであることを，NR がレディ出ないことを表す．
+
+\begin{table}[htb]
+  \caption{スワップを行う場合のセグメント選択アルゴリズム}
+  \footnotesize
+  \center
+   \begin{tabular}{|l|l|} \hline \hline
+    ソース・タグの状態 & アルゴリズム \\ \hline
+    (NR，NR) & 第 1 ソース・タグでセグメントを選択する． \\ \hline
+    (R，NR) & スワップを行い，第 2 ソース・タグでセグメントを選択する．\\ \hline
+    (NR，R) & 第 1 ソース・タグでセグメントを選択する．\\ \hline
+    (R，R) & セグメント・インディペンデントとしてラウンドロビンでセグメントを選択する． \\ \hline
+  \end{tabular}
+  \label{tab:agg_algorithm}
+\end{table}
 なお，両ソース・オペランドがレディのとき以外で，選択されたセグメントに空きがない場合は，ディスパッチをストールして当該のセグメントに空きが出るまで待ち合わせる．
+
+% \begin{itemize}
+%   \item \textbf{両ソース・オペランドともレディでない場合}：第 1 ソース・タグでセグメントを選択する．
+%   \item \textbf{第 1 ソース・オペランドのみレディである場合}：スワップを行い，第 2 ソース・タグでセグメントを選択する．
+%   \item \textbf{第 2 ソース・オペランドのみレディである場合}：第 1 ソース・タグでセグメントを選択する．
+%   \item \textbf{両ソース・オペランドがレディである場合}：セグメント・インディペンデントとしてラウンドロビンでセグメントを選択する．
+% \end{itemize}
 
 \begin{figure}[htb]
   \centering
@@ -104,7 +119,10 @@
 \label{sec:sub_segment}
 サブ・セグメント方式は，第 1 ソース・タグの下位ビットに応じて分割されるセグメントを，第 2 ソース・タグの下位ビットに応じてさらに細かく分割する．第 2 ソース・タグの下位ビットによる分割をサブ・セグメント（S-seg）と呼び，従来の第 1 ソース・タグによる分割をサブ・セグメントに対応してメイン・セグメント（M-seg）と呼ぶこととする．
 
-サブ・セグメントを導入した発行キューの分割を\fig{sub_segment}に示す．黒色の枠で示す各メイン・セグメントを，赤色と青色で示すようにさらにサブ・セグメントに分割する．同図は，メイン・セグメント数が 4 ，サブ・セグメント数が 2 の場合の例を表している．各セグメントの左には，（M-seg, S-seg）という形式でメイン及びサブ・セグメントの番号を表している．
+サブ・セグメントを導入した発行キューの分割を\fig{sub_segment}に示す．黒色の枠で示す各メイン・セグメントを，赤色と青色で示すようにさらにサブ・セグメントに分割する．同図は，メイン・セグメント数が 4 ，サブ・セグメント数が 2 の場合の例を表している．各セグメントの左には，（M-seg, S-seg）という形式でメイン及びサブ・セグメントの番号を表している．なお，本研究においては，メイン・セグメント数とサブ・セグメント数は，必ず次の条件を満たすものとする． 
+\[
+main\_segument\_num \geq sub\_segument\_num
+\]
 
 サブ・セグメント方式について，ディスパッチとウェイクアップの動作をそれぞれ説明する．
 
@@ -129,7 +147,21 @@
 \end{itemize}
 サブ・セグメント方式とスワップを併用することによって，ディスパッチ時に第 1 ソース・オペランドのみレディである命令におけるタグ比較回数の削減が「1/サブ・セグメント数」から「1/メイン・セグメント数」となる．従って，\fig{sub_segment}に示した分割のようにメイン・セグメント数がサブ・セグメント数よりも多い場合に，タグ比較回数をより多く削減できる．
 
+サブ・セグメントとスワップを併用する場合のセグメントの選択アルゴリズムを\tab{agg_algorithm_subseg}に示す．
 
+\begin{table}[htb]
+  \caption{スワップを行う場合のセグメント選択アルゴリズム(サブ・セグメント併用)}
+  \footnotesize
+  \center
+   \begin{tabular}{|c|p{13cm}|} \hline \hline
+    ソース・タグの状態 & アルゴリズム \\ \hline
+    (NR，NR) & 第 1 ソース・タグでメイン・セグメントを，第 2 ソース・タグでサブ・セグメントを選択． \\ \hline
+    (R，NR) & スワップを行い，第 2 ソース・タグでメイン・セグメントを選択する．サブ・セグメントは S-seg インディペンデントとしてセグメントを選択．\\ \hline
+    (NR，R) & 第 1 ソース・タグでメイン・セグメントを選択する．サブ・セグメントは S-seg インディペンデントとしてセグメントを選択．\\ \hline
+    (R，R) & セグメント・インディペンデントとしてセグメントを選択． \\ \hline
+  \end{tabular}
+  \label{tab:agg_algorithm_subseg}
+\end{table}
 
 
 
