--- a/thesis/src/eval.tex
+++ b/thesis/src/eval.tex
@@ -193,3 +193,11 @@ AGGRESSIVE の性能低下率に関して考える．(8,2) では，(16,1)と比
 以上の考察から，セグメントの総数が同じである場合，サブ・セグメントを使用することによって，AGGRESSIVE モードでの容量効率の低下による性能低下を抑制できることがわかった．
 
 最後に，SWITCH 方式の有効性に関して説明する．(8, 2)の場合，サブ・セグメントが非常に有効である結果，AGGRESSIVE での大幅な性能低下が見られないため，(16,1)の場合と比較して SWITCH 方式の有効性は高くないように見られる．しかし， imagick や lbm などのベンチマークにおいては AGGRESSIVE で発生する性能低下を抑制できている．また，サブ・セグメントを使用しているため，CONSERVATIVE でのタグ比較削減率が高く，その結果 SWITCH 方式自体のタグ比較削減率も高くなっている．
+
+\section{SWITCH 方式のしきい値に関する評価}
+SWITCH 方式において，ILP と ILP の高低を判定するために使用するしきい値に関する評価を行う．
+
+評価の流れとしては，まずサブ・セグメントを使用しない(16，1)の場合で評価を行う．そして，(16,1)の場合に最適とされたしきい値が，サブ・セグメントを使用する(8，2)の場合においても有効かどうかを確認する．
+
+\subsection{ILP の評価値：IPC}
+ILP の評価として，IPC を使用する場合の評価を行った．
