--- a/thesis/src/eval.tex
+++ b/thesis/src/eval.tex
@@ -3,7 +3,6 @@
 \label{sec:eval}
 本章では，提案手法の評価を行う．
 
-
 \section{評価環境}
 \label{sec:eval_env}
 評価環境について説明する．性能やタグ比較回数を評価するために，SimpleScalar v.3.0a をベースに作成したシュミレータを使用した．評価で仮定したプロセッサ構成を\tab{base_config}に示す．
@@ -197,35 +196,89 @@ AGGRESSIVE の性能低下率に関して考える．(8,2) では，(16,1)と比
 \section{SWITCH 方式のしきい値に関する評価}
 SWITCH 方式において，ILP と ILP の高低を判定するために使用するしきい値に関する評価を行う．
 
-評価の流れとしては，まずサブ・セグメントを使用しない(16，1)の場合で評価を行う．そして，(16,1)の場合に最適とされたしきい値が，サブ・セグメントを使用する(8，2)の場合においても有効かどうかを確認する．
-
 \begin{figure}[htb]
   \centering
   \includegraphics[keepaspectratio, scale=.8]{switch_IPC_rate}
   \caption{IPC による SWITCH 方式の制御}
   \label{fig:switch_IPC_rate}
 \end{figure}
-\begin{figure}[htb]
-  \centering
-  \includegraphics[keepaspectratio, scale=.8]{switch_IPC_comp}
-  \caption{IPC による制御を行った SWITCH 方式によるタグ比較削減}
-  \label{fig:switch_IPC_comp}
-\end{figure}
-\begin{figure}[htb]
-  \centering
-  \includegraphics[keepaspectratio, scale=.8]{switch_IPC_performance}
-  \caption{IPC による制御を行った SWITCH 方式による性能低下}
-  \label{fig:switch_IPC_performance}
-\end{figure}
+% \begin{figure}[htb]
+%   \centering
+%   \includegraphics[keepaspectratio, scale=.8]{switch_IPC_comp}
+%   \caption{IPC による制御を行った SWITCH 方式によるタグ比較削減}
+%   \label{fig:switch_IPC_comp}
+% \end{figure}
+% \begin{figure}[htb]
+%   \centering
+%   \includegraphics[keepaspectratio, scale=.8]{switch_IPC_performance}
+%   \caption{IPC による制御を行った SWITCH 方式による性能低下}
+%   \label{fig:switch_IPC_performance}
+% \end{figure}
 
-\subsection{ILP の評価値：IPC}
+\subsection{ILP の評価値}
+ILP を評価する値として IPC と ISR の評価を行う．評価の方針としては，まず IPC と ISR のしきい値に関して適当な値を求める．適当ななしきい値は，しきい値を変化させた場合に AGGRESSIVE モードで実行される割合を評価することによって決定する．
+
+その後，それぞれの評価値を利用する場合の提案手法によるタグ比較削減と性能低下を比較し，IPC と ISR のどちらがより適した評価指標か評価を行う．
+
+\subsubsection{IPC による制御}
 ILP の評価として，IPC を使用する場合の評価を行った．本評価は，セグメントの数を(16，1)で行った．また，ILP による SWITCH 方式の制御のみ行い，MLP による制御は行っていない．
 
-\subsubsection{IPC のしきい値の評価}
 \fig{switch_IPC_rate}に，IPC のしきい値を変化させた場合の，AGGRESSIVE モードで実行される割合を示す．各判例の IPC=X は，ILP が高いと判定する IPC のしきい値をX とした場合を表す．また，avg は全ベンチマークの平均を，high ILP avg は ILP の高いベンチマークでの平均を示している． 
 
 当図より，しきい値の IPC が高くなるほど，AGGRESSIVE で実行される割合が多くなっていることが分かる．これは，ILP が高いと判定される基準が厳しくなるためである．ILP の高いベンチマークに関して見ると，多くのベンチマークにおいて，しきい値が 3.5 の場合は AGGRESSIVE モードの割合が高いが，しきい値が 4.0 になると AGGRESSIVE モードの割合が急激に増加していることが分かる．high ILP avg を見ると，しきい値が 3.5 の場合は AGGRESSIVE モードの割合は 5\% 程度であるが，しきい値が 4.0 の場合は AGGRESSIVE モードの割合は 35\% 程度と高くなる．
 
 ILP が高い場合は CONSERVATIVE モードで実行することが望ましい．従って，IPC のしきい値は，3.5 程度が適当であるといえる．
 
-\subsubsection{しきい値の違いによる提案手法のタグ比較削減と性能低下}
+\begin{figure}[htb]
+  \centering
+  \includegraphics[keepaspectratio, scale=.8]{switch_ISR_rate}
+  \caption{ISR による SWITCH 方式の制御}
+  \label{fig:switch_ISR_rate}
+\end{figure}
+
+\subsubsection{IPC による制御}
+ILP の評価として，ISR を使用する場合の評価を行った．I評価は IPC の場合と同様にセグメントの数を(16，1)として行った．また，ILP による SWITCH 方式の制御のみ行い，MLP による制御は行っていない．
+
+\fig{switch_ISR_rate}に，ISR のしきい値を変化させた場合の，AGGRESSIVE モードで実行される割合を示す．各判例の ISR=X は，ILP が高いと判定する ISR のしきい値を X とした場合を表す．
+当図より，しきい値の ISR が低くなるほど，AGGRESSIVE で実行される割合が多くなっていることが分かる．これは，ILP が高いと判定される基準が厳しくなるためである．ILP の高いベンチマークに関して見ると，多くのベンチマークにおいて，しきい値が 10 より高くなると，AGGRESSIVE の割合が小さくなっていることがわかる．high ILP avg を見ると，しきい値が 5 の場合は AGGRESSIVE モードの割合は 15\% 程度であるが，しきい値が 10 の場合は AGGRESSIVE モードの割合は 5\% 程度と低くなる
+
+ILP が高い場合は CONSERVATIVE モードで実行することが望ましい．従って，ISR のしきい値は，10 程度が適当であるといえる．
+\begin{figure}[htb]
+  \centering
+  \includegraphics[keepaspectratio, scale=.8]{switch_ILP_performance}
+  \caption{ILP による制御を行った SWITCH 方式による性能低下}
+  \label{fig:switch_ILP_performance}
+\end{figure}
+
+\begin{figure}[htb]
+  \centering
+  \includegraphics[keepaspectratio, scale=.8]{switch_ILP_comp}
+  \caption{ILP による制御を行った SWITCH 方式によるタグ比較回数}
+  \label{fig:switch_ILP_comp}
+\end{figure}
+
+\subsubsection{IPC と ISR の比較}
+\fig{switch_ILP_performance}に，IPC と ISR を用いて制御を行う SWITCH 方式での性能低下を示す．同図より，ILP が高いベンチマークにおいては，ILP と ISR いずれの指標においても正しく評価できており，結果として SWITCH による性能低下が CONSERVATIVE と同程度に抑制できていることがわかる．また，ILP が高くないベンチマークにおいては，IPC と ISR による制御において大きな差はみられない．平均を見ても，IPC と ISR は同程度であると言える．
+
+\fig{switch_ILP_comp}に，IPC と ISR を用いて制御を行う SWITCH 方式でのタグ比較回数を示す．タグ比較回数も，性能低下と同様に IPC と ISR で大きな差は見られない．これらの評価から， 2 つの指標の有効性に優位な差はなく，どちらの指標を用いても良いと思われる．
+
+本論文では，ILP の評価値として一般的である IPC の他に，ISR という指標も有効であるということを主張するために，ISR を ILP を評価する指標として用いることとする．また，ISR のしきい値は 10 が適しているとする．
+
+\subsection{MLPの評価値}
+MLP を評価する値として LLC MPKI の評価を行う．評価の方針としては，LLC MPKI のしきい値に関して適当な値を求める．適当ななしきい値は，しきい値を変化させた場合に AGGRESSIVE モードで実行される割合を評価することによって決定する．
+
+\begin{figure}[htb]
+  \centering
+  \includegraphics[keepaspectratio, scale=.8]{switch_MPKI_rate}
+  \caption{MPKI による SWITCH 方式の制御}
+  \label{fig:switch_MPKI_rate}
+\end{figure}
+
+\subsubsection{LLC MPKI による制御}
+本評価は，セグメントの数を(16，1)で行った．また，MLP による SWITCH 方式の制御のみ行い，ILP による制御は行っていない．
+
+\fig{switch_MPKI_rate}に， LLC MPKI のしきい値を変化させた場合の，AGGRESSIVE モードで実行される割合を示す．各判例の MPKI=X は，MLP が高いと判定する MPKI のしきい値を X とした場合を表す．また，avg は全ベンチマークの平均を，high MLP avg は MLP の高いベンチマークでの平均を示している． 
+
+当図より，LLC MPKI しきい値が高くなるほど，AGGRESSIVE で実行される割合が多くなっていることが分かる．これは，LLC MPKI が高いと判定される基準が厳しくなるためである．MLP の高いベンチマークに関して考える．omnetpp と lbm においては，しきい値が 2 以下場合は AGGRESSIVE モードの割合が低いが，しきい値が 3 以上 になると AGGRESSIVE モードの割合が急激に増加していることが分かる．xalancbmk に関しては，MLP の高いベンチマークの中でも特にメモリ・インテンシブなベンチマーク(LLC MPKI が 10 程度)であるため，しきい値を 5 まで増加させても AGGRESSIVE の割合は増加しない．
+
+MLP が高い場合は CONSERVATIVE モードで実行することが望ましい．従って，MPC のしきい値は，2 程度が適当であるといえる．
