--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -33,9 +33,7 @@
 
 % ---------- ユーザ入力ここから ----------
 % タイトルページの情報
-\title{\bf 容量効率を意識したソース・タグ値に \\
-基づくセグメント化による\\
-発行キューの電力削減}
+\title{\bf ソース・タグ値に基づくセグメント化に\\よる発行キューの電力削減}
 \author{\bf 森　健一郎}
 \date{3} % 令和~年
 
@@ -84,8 +82,8 @@
 
 
 % 付録（必要に応じてコメントを外したり，新たに追加する）
-\appendix
-\include{src/appendix1}
+% \appendix
+% \include{src/appendix1}
 
 % 発表実績（なければコメントアウトしておく）
 \include{src/publication}
