--- a/thesis/ref_swopp.bib
+++ b/thesis/ref_swopp.bib
@@ -247,6 +247,26 @@ month =	         {November}
   month = {February},
 }
 
+@InProceedings{AMD-Bulldozer,
+  author = {M. Golden and S. Arekapudi and J. Vinh},
+  title = {40-Entry Unified Out-of-Order Scheduler and Integer Execution Unit for the {AMD} {Bulldozer} x86-64 Core},
+  booktitle = {2011 IEEE International Solid-State Circuits Conference, Digest of Technical Papers},
+  year = {2011},
+  pages = {80-82},
+  month = {February},
+}
+
+@Article{IBM-Power8,
+  author = 	 {B. Sinharoy and J. A. Van Norstrand and R. J. Eickemeyer and H. Q. Le and J. Leenstra and D. Q. Nguyen and B. Konigsburg and K. Ward and M. D. Brown and J. E. Moreira and D. Levitan and S. Tung and D. Hrusecky and J. W. Bishop and M. Gschwind and M. Boersma and M. Kroener and M. Kaltenbacha and T. Karkhanis and K. M. Fernsler},
+  title = 	 {{IBM POWER8} Processor Core Microarchitecture},
+  journal = 	 {IBM Journal of Research and Development},
+  year = 	 {2015},
+  volume = 	 {59, issue 1},
+  OPTnumber = 	 {},
+  pages = 	 {2:1 - 2:21},
+  month = 	 {January - February},
+}
+
 @Inproceedings{Kora2013,
   author =	 {Y. Kora and K. Yamaguchi and H. Ando},
   title = 	 {{MLP}-aware Dynamic Instruction Window Resizing for Adaptively Exploiting Both {ILP} and {MLP}},
