--- a/thesis/src/introduction.tex
+++ b/thesis/src/introduction.tex
@@ -14,9 +14,9 @@
   \item セグメント化によりディスパッチできるエントリが制限されるため，発行キューの容量効率が低下し，容量に敏感なプログラムにおいて性能が低下するという問題が存在する．この問題に対応するため，本論文では \textbf{SWITCH} という手法を提案する．SWITCH では，容量効率を重視したディスパッチ・アルゴリズムと，タグ比較回数の削減を重視したディスパッチ・アルゴリズムを，容量効率の重要性に応じて切り替えて使用することにより，性能低下を抑制する．
 \end{itemize}
 
-提案手法を SPEC CPU 2017 ベンチマークを用いて評価し，性能低下を 最大でも 5\% 以下（平均 -1\%）に抑えつつ，タグ比較の回数を平均で 85\% 削減できることを確認した．
+提案手法を SPEC CPU 2017 ベンチマークを用いて評価し，性能低下を 最大でも 5\% 以下に抑えつつ，タグ比較の回数を平均で 82\% 削減できることを確認した．
 
-本論文の残りの構成は次の通りである．まず，\ref{sec:issue_queue}節で発行キューの基本的な事項を説明する．そして，\ref{sec:segmented_IQ}節で提案手法の基本となるアイデアに関して説明した後，\ref{sec:second_tag_comp}節で提案手法における第 2  ソース・タグのタグ比較回数削減方法に関して述べる．その後，\ref{sec:occupency_reduction}節で提案手法の問題点である発行キューの容量効率の低下に関して説明した後，\ref{sec:switch}節で容量効率の低下に対する対策方法を説明する．\ref{sec:eval}節で評価を行い，\ref{sec:summary}節でまとめる．
+本論文の残りの構成は次の通りである．まず，\refchap{related_work}で関連研究を説明し， \refchap{basic_IQ}で発行キューの基本的な事項を説明する．そして，\refchap{segment_IQ}で提案手法の基本となるアイデアに関して説明したあと，\refchap{switch}で提案手法の問題点である発行キューの容量効率の低下とその対策方法を説明する．\refchap{eval}で評価を行い，\refchap{summary}でまとめる．
 
 
 % 本論文の構成は次の通りである．まず，\refchap{related_work}で関連研究を示す．\refchap{miss_assumed_pipeline}では MAP について説明する．その後，\refchap{hybrid_arc}で従来の構成と MAP を組み合わせたアーキテクチャについて述べ，\refchap{sw_algorithm}では提案するパイプラインの切り替えアルゴリズムについて述べる．\refchap{evaluation}では提案手法の評価を行い，最後に\refchap{summary}でまとめる．
