--- a/thesis/src/related_work.tex
+++ b/thesis/src/related_work.tex
@@ -1,42 +1,41 @@
 
 \chapter{関連研究}
 \label{sec:related_work}
-本章では，IQ に関連する研究について述べる．\refsec{relate_IQ}で IQ に関する一般的な関連研究に関して説明し，\refsec{relate_IQ} で IQ の研究のうち，電力に関係する研究を述べる．
+本章では，発行キュー（IQ：Issue Queue)に関連する研究について述べる．\refsec{relate_IQ}で IQ に関する一般的な関連研究に関して説明し，\refsec{relate_IQ} で IQ の研究のうち，電力に関係する研究を述べる．
 
 \section{IQ に関する関連研究}
 \label{sec:relate_IQ}
-Palacharlaらは，命令発行幅とIQのサイズを変化させた時の，ウェイクアップ論理と選択論理の遅延を評価した~\cite{Palacharla1997}．また，遅延を小さくするために，IQを複数のFIFOバッファで構成し，依存する命令を同じFIFOバッファに割り当てる依存ベースのIQを提案した．この手法では，各バッファの先頭の命令のみ発行可能かチェックすれば良いので，回路が単純化され遅延が減少する．
+Palacharla らは，命令発行幅と IQ のサイズを変化させた時の，ウェイクアップ論理と選択論理の遅延を評価した~\cite{Palacharla1997}．また，遅延を小さくするために，IQ を複数のFIFOバッファで構成し，依存する命令を同じFIFOバッファに割り当てる依存ベースの IQ を提案した．この手法では，各バッファの先頭の命令のみ発行可能かチェックすれば良いので，回路が単純化され遅延が減少する．
 
-Starkらは，IPCをほとんど低下させずに，ウェイクアップ論理と選択論理をパイ
-プライン化する手法を提案した\cite{Stark2000}．この手法では，投機的にウェイクアップを行うことで，依存する命令を連続するサイクルで発行できるようにした．
+Stark らは，IPC をほとんど低下させずに，ウェイクアップ論理と選択論理をパイプライン化する手法を提案した~\cite{Stark2000}．この手法では，投機的にウェイクアップを行うことで，依存する命令を連続するサイクルで発行できるようにした．
 
-五島らは，ウェイクアップ論理を従来のCAMではなく，依存行列と呼ぶRAMで構成する手法を提案した\cite{goshima2001}．これによって比較器を用いずに依存する命令をウェイクアップすることが可能で，ウェイクアップの遅延を短縮できる．
+五島らは，ウェイクアップ論理を従来の CAM ではなく，依存行列と呼ぶ RAM で構成する手法を提案した\cite{goshima2001}．これによって比較器を用いずに依存する命令をウェイクアップすることが可能で，ウェイクアップの遅延を短縮できる．
 
-Sassoneらは，依存行列の遅延と電力をより小さくするための手法を提案した\cite{sassone2007}．具体的には，従来はすべての命令について，その古さを完全に追跡していたのに対して，命令をグループ化してグループ単位で古いものを選択する．これにより，性能低下を最小限に抑えながら，回路の規模を小さくできる．
+Sassone らは，依存行列の遅延と電力をより小さくするための手法を提案した\cite{sassone2007}．具体的には，従来はすべての命令について，その古さを完全に追跡していたのに対して，命令をグループ化してグループ単位で古いものを選択する．これにより，性能低下を最小限に抑えながら，回路の規模を小さくできる．
 
-Lebeckらは．キャッシュ・ミスするロードのような長いレイテンシの命令に依存する命令を，IQとは別の待機用バッファに入れ，その長いレイテンシの処理が完了するまでIQに挿入しないという方式を提案した\cite{Lebeck2002}．これによって，IQが待機する命令で埋ることによって起こるストールの頻度が減り，性能が向上する．
+Lebeck らは．キャッシュ・ミスするロードのような長いレイテンシの命令に依存する命令を，IQ とは別の待機用バッファに入れ，その長いレイテンシの処理が完了するまで IQ に挿入しないという方式を提案した\cite{Lebeck2002}．これによって，IQ が待機する命令で埋ることによって起こるストールの頻度が減り，性能が向上する．
 
-Raaschらは，IQをいくつかのセグメントに分割する方式を提案した\cite{Raasch2002}．この方式では，各命令の依存命令チェーンのレイテンシを元に割り当てるセグメントが決定される．そして，発行可能になる直前に最下位セグメントである発行バッファに命令を移動する．この発行バッファでのみ発行を行うことで，すべてのエントリから発行できる通常のIQと比較して遅延を短縮できる．
+Raasch らは，IQ をいくつかのセグメントに分割する方式を提案した\cite{Raasch2002}．この方式では，各命令の依存命令チェーンのレイテンシを元に割り当てるセグメントが決定される．そして，発行可能になる直前に最下位セグメントである発行バッファに命令を移動する．この発行バッファでのみ発行を行うことで，すべてのエントリから発行できる通常の IQ と比較して遅延を短縮できる．
 
-Kimらは，レイテンシが互いに1サイクルの依存関係のある2つの命令をグループ化し，1つの命令としてIQのエントリでスケジューリングすることで，依存グラフのエッジのレイテンシ短縮とキューの容量効率を上げる手法を提案した\cite{Kim2003}．
+Kim らは，レイテンシが互いに1サイクルの依存関係のある2つの命令をグループ化し，1つの命令として IQ のエントリでスケジューリングすることで，依存グラフのエッジのレイテンシ短縮とキューの容量効率を上げる手法を提案した\cite{Kim2003}．
 
-Gibsonらは，依存する命令をポインタでつなぎ，ポインタをたどることでウェイクアップを行う手法を提案した\cite{Gibson2010}．この方式によりCAMが不要になり，電力を削減できる．
+Gibson らは，依存する命令をポインタでつなぎ，ポインタをたどることでウェイクアップを行う手法を提案した\cite{Gibson2010}．この方式により CAM が不要になり，電力を削減できる．
 
-安藤らは，実行プログラムの命令レベル並列性(ILP)とメモリ・レベル並列性(MLP)に応じて IQ の方式を切り替える手法を実装した\cite{Ando2019}．ILP と MLP のいずれかが高い場合は IQ の容量効率が重要であるため，ランダム・キューで実行する．ILP も MLP もいずれも低い場合には，容量効率よりも正しい発行優先度のほうが重要であるためサーキュラー・キューで実行する．
+安藤らは，実行プログラムの命令レベル並列性（ILP）とメモリ・レベル並列性（MLP）に応じて IQ の方式を切り替える手法を実装した\cite{Ando2019}．ILP と MLP のいずれかが高い場合は IQ の容量効率が重要であるため，ランダム・キューで実行する．ILP も MLP もいずれも低い場合には，容量効率よりも正しい発行優先度のほうが重要であるためサーキュラー・キューで実行する．
 
-甲良らは，実行プログラムの ILP と MLP に応じて IQ のサイズを変化させる手法を提案した\cite{Kora2013}．本手法では，いずれかが高い場合には，IQ の容量が重要となるため IQ のエントリ数を増加し，どちらも低い場合には IQ のエントリ数を減少させる．
+甲良らは，実行プログラムの ILP と MLP に応じて IQ のサイズを変化させる手法を提案した\cite{Kora2013}．本手法では，ILP と MLP のいずれかが高い場合には，IQ の容量が重要となるため IQ のエントリ数を増加し，どちらも低い場合には IQ のエントリ数を減少させる．
 
 \section{IQ の電力削減に関する関連研究}
 \label{sec:relate_energy}
-Folegnaniらは，空のエントリの比較器や既にレディなオペランドを持つ比較器など，タグを比較する必要がない比較器を動作させないことで，消費エネルギーを削減する手法を提案した\cite{folegnani2001}．
+Folegnani らは，空のエントリの比較器や既にレディなオペランドを持つ比較器など，タグを比較する必要がない比較器を動作させないことで，消費エネルギーを削減する手法を提案した\cite{folegnani2001}．
 
-Ponomarev らは，リソース要求に応じて 発行キューのサイズをリサイズすることにより，消費エネルギーを削減する手法を提案した~\cite{ponomarev2001} .
+Ponomarev らは，リソース要求に応じて IQ のサイズをリサイズすることにより，消費エネルギーを削減する手法を提案した~\cite{ponomarev2001} .
 
-Ernstらは，IQに入ってくる命令のうちのほとんどが，はじめから少なくとも1つのソース・オペランドがレディであると指摘した\cite{ernst2002}．そしてIQに，2つのソース・オペランドを保持できるエントリに加えて，1つのソース・オペランドのみ保持できるエントリと，ソース・オペランドを保持しないエントリを用意し，レディでないソース・オペランドの数に応じていずれかにディスパッチする手法を提案した．さらにこの手法を実現するために，命令の2つのオペランドの内，あとにレディになるオペランドを予測する手法である Last Tag Prediction も提案した．
+Ernst らは，IQ に入ってくる命令のうちのほとんどが，はじめから少なくとも1つのソース・オペランドがレディであると指摘した\cite{ernst2002}．そして IQ に，2つのソース・オペランドを保持できるエントリに加えて，1つのソース・オペランドのみ保持できるエントリと，ソース・オペランドを保持しないエントリを用意し，レディでないソース・オペランドの数に応じていずれかにディスパッチする手法を提案した．さらにこの手法を実現するために，命令の2つのオペランドの内，あとにレディになるオペランドを予測する手法である Last Tag Prediction も提案した．
 
-Sembrant らは，クリティカル・パス上にない命令を発行キューとは別のバッファに入れ，ディスパッチを遅延させることによって，性能を低下させずに発行キューのサイズを小さくする手法を提案した~\cite{Sembrant2015}.
+Sembrant らは，クリティカル・パス上にない命令を IQ とは別のバッファに入れ，ディスパッチを遅延させることによって，性能を低下させずに IQ のサイズを小さくする手法を提案した~\cite{Sembrant2015}.
 
-Homayoun らは，キャッシュ・ミスの処理中に発行幅を半減させることで，IQの消費電力を削減する手法を提案した\cite{H.Homayoun2011}．発行幅半減中に元の発行幅の半分以上の命令が発行される場合，一時的にその命令を小さなバッファに移動させることで対応している．
+Homayoun らは，キャッシュ・ミスの処理中に発行幅を半減させることで，IQ の消費電力を削減する手法を提案した\cite{H.Homayoun2011}．発行幅半減中に元の発行幅の半分以上の命令が発行される場合，一時的にその命令を小さなバッファに移動させることで対応している．
 
-松田らはウェイクアップ時のタグ比較を 2 段階に分割することによりエネルギー削減を行う方法を提案した\cite{kobayashi-thesis, matsuda-thesis}．この方法では，タグの比較を高位ビットと低位ビットに分割し，低位ビットの比較を最初のサイクルで行う．そして低ビットが一致していた場合のみ，次のサイクルで高位ビットの比較を行うことによってエネルギーを削減する．また，タグの 2 段階比較には，ウェイクアップに 2 サイクル必要であるため性能が低下するという欠点が存在する．これに対し本手法では，クリティカルパス上にある命令のみ 1 サイクルで比較を行い性能低下の軽減を行う．
+小林，松田らは，ウェイクアップ時のタグ比較を 2 段階に分割することによりエネルギー削減を行う方法を提案した\cite{kobayashi-thesis, matsuda-thesis}．この方法では，タグの比較を高位ビットと低位ビットに分割し，低位ビットの比較を最初のサイクルで行う．そして低位ビットが一致していた場合のみ，次のサイクルで高位ビットの比較を行う．低位ビットが異なる場合高位ビットの比較は行われず，エネルギーを削減することができる．また，タグの 2 段階比較には，ウェイクアップに 2 サイクル必要であるため性能が低下するという欠点が存在する．これに対し本手法では，クリティカルパス上にある命令のみ 1 サイクルで比較を行い性能低下の軽減を行う．
 
