--- a/thesis/ref_swopp.bib
+++ b/thesis/ref_swopp.bib
@@ -297,7 +297,7 @@ pages={712-727}
   
 @inproceedings{Sembrant2015,
 author = {Sembrant, Andreas and Carlson, Trevor and Hagersten, Erik and Black-Shaffer, David and Perais, Arthur and Seznec, Andr\'{e} and Michaud, Pierre},
-title = {Long Term Parking (LTP): Criticality-aware Resource Allocation in OOO Processors},
+title = {{Long Term Parking} ({LTP}): Criticality-aware Resource Allocation in OOO Processors},
 year = {2015},
 month = {December},
 booktitle = {Proceedings of the 48th International Symposium on Microarchitecture},
