--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -104,6 +104,10 @@
 % andolab2を使う場合は，Makefileも修正する
 \bibliographystyle{IEEEtran} 
 % \bibliographystyle{andolab2}
+
+\bibhead
+\bibchap{}
+
 \bibliography{ref_swopp}
 
 \end{document}
